[package]
authors = ["Greg Green <ggreen@bit-builder.com>", "David O'Connor <the_alchemist@fastmail.com>"]
name = "dronecan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-can = "0.4.1"
defmt = { version = "0.3.4", optional = true }
heapless = "0.8.0"
log = "0.4.21"

# For the tightly-packed and many-fielded Fix2.
packed_struct = {version = "^0.10.1", default_features = false }
# We use bitvec for serializing and deserializing standard DroneCan DSDL
# types that use dynamic-sized arrays; these are unable to be tackled by PackedStruct.
bitvec = { version = "1.0.1", default-features = false }

# for f16 implementation, mimicking `half`'s.
crunchy = "0.2.2"

[dev-dependencies]
test-log = "0.2.15"

[features]
# use the defmt library
defmt = ["dep:defmt"]
